@@ -3,6 +3,9 @@ PHP                                                                        NEWS
 ?? ??? 2009, PHP 5.3.0 RC 4
 - Added phar.phar generation for Windows. (Greg)
 
+- Fixed bug #48533 (__callStatic is not invoked for private/protected methods).
+  (Felipe)
+
 11 Jun 2009, PHP 5.3.0 RC 3
 - Upgraded bundled sqlite to version 3.6.14.2. (Scott, Ilia)
 - Upgraded bundled libmagic to 5.03 in the fileinfo extension. (Scott)
